--- a/package.json
+++ b/package.json
@@ -11,14 +11,11 @@
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.1.4",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
     "sort-by": "^1.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "sass": "^1.55.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
